--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "loader-utils": "3.2.1",
-    "typescript": "5.7.2"
+    "typescript": "5.7.2",
+    "ajv": "^8.17.1"
   },
   "scripts": {
     "start": "react-scripts start",
