--- a/package.json
+++ b/package.json
@@ -5,25 +5,28 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
+    "@firebase/auth": "1.11.1",
+    "firebase": "12.6.0",
+    "lucide-react": "0.555.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "^5.0.0",
-    "firebase": "12.6.0",
-    "@firebase/auth": "1.11.1",
-    "lucide-react": "0.555.0"
+    "react-scripts": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
+    "ajv": "^8.17.1",
+    "gh-pages": "^6.3.0",
     "loader-utils": "3.2.1",
-    "typescript": "5.7.2",
-    "ajv": "^8.17.1"
+    "typescript": "^5.1.6"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": [
     ">0.2%",
