--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@firebase/auth": "1.11.1",
     "firebase": "12.6.0",
+    "jspdf": "^3.0.4",
     "lucide-react": "0.555.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
