--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "ajv": "^8.17.1",
+    "autoprefixer": "^10.4.23",
     "gh-pages": "^6.3.0",
     "loader-utils": "3.2.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.1.6"
   },
   "scripts": {
