--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "^5.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "ajv": "^8.17.1",
